syntax = "proto3";

package alumno;

// Servicio simplificado para demostrar gRPC
service AlumnoService {
  // Consultas básicas
  rpc GetAlumnoCount(CountRequest) returns (CountResponse);
  rpc GetAllAlumnos(GetAllRequest) returns (GetAllResponse);
  
  // Mutación básica
  rpc AddAlumno(AddAlumnoRequest) returns (AddAlumnoResponse);
}

// Definición básica del Alumno
message Alumno {
  string id = 1;
  string name = 2;
  string lastname = 3;
  string mail = 4;
}

// ============ REQUESTS ============
message CountRequest {}

message GetAllRequest {}

message AddAlumnoRequest {
  string name = 1;
  string lastname = 2;
  string mail = 3;
}

// ============ RESPONSES ============
message CountResponse {
  int32 count = 1;
}

message GetAllResponse {
  repeated Alumno alumnos = 1;
}

message AddAlumnoResponse {
  Alumno alumno = 1;
  bool success = 2;
  string message = 3;
}
